# haskell-template

./: .mapping  LICENSE  README.md  project.cabal
src/: project-test.hs  project.hs
test/: project-test.hs
